--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,38 @@
 body {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Roboto", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  background: #ffffff;
+
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.board-container{
+  max-width: 960px;
+  margin: 150px auto 0 auto;
+}
+.memoryCard{
+  height: 80px;
+  width: 120px;
+}
+.btn {
+  padding: 5px 15px;
+  background: #ccc;
+  margin-right: 10px;
+}
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+.menu{
+  margin: 0 auto;
+  text-align: center;
 }
